# glitch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  build.py  vcpkg.json
assets/: Cube.glb  floor.glb
assets/shaders/: compile_shaders.sh  compute-shader.comp.spv  dissort.comp  gradient.comp  grid.comp  grid.comp.spv  sea.comp  self-reflect.comp  xy_plane.frag  xy_plane.frag.spv  xy_plane.vert  xy_plane.vert.spv
cmake/: CMakeOptions.cmake  FindGlitch.cmake  GenFFI.cmake  ShaderUtils.cmake
cmake/toolchains/: linux.cmake.in  windows.cmake.in
cockpit/: CMakeLists.txt  README.md
cockpit/src/: camera_controller.h  cockpit.cpp  cockpit.h  debug_panel.h  grid_pass.cpp  main.cpp
config/: ui.ini
doc/: shader-conventions.md
doc/conventions/: material.glmat  texture.gltex
editor/: CMakeLists.txt  TODO.md
editor/main/: main.cpp
editor/scripts/: rotating_cubes.lua  test_utils.lua
editor/shaders/: infinite_grid.slang
editor/src/: camera_controller.cpp  camera_controller.h  debug_panel.cpp  editor.cpp  editor.h  grid_pass.cpp  grid_pass.h  main.cpp  pch.h
engine/: CMakeLists.txt  pch.h
engine/core/: CMakeLists.txt  application.cpp  application.h  assert.h  buffer.cpp  buffer.h  color.h  core.h  deletion_queue.cpp  deletion_queue.h  entrypoint.cpp  entrypoint.h  event_system.h  input.cpp  input.h  key_code.h  log.cpp  log.h  main.cpp  matrix.h  memory.h  timer.cpp  uid.h  vector.h  window.cpp  window.h
engine/glitch/: pch.h
engine/glitch/asset/: asset.h  asset_system.cpp  asset_system.h  asset_system.inl
engine/glitch/core/: application.cpp  application.h  color.h  config.cpp  config.h  core.h  defines.h  deletion_queue.h  entrypoint.h  hash.h  json.h  (+13 more)
engine/platform/vulkan/: CMakeLists.txt  vk_buffer.cpp  vk_buffer.h  vk_commands.cpp  vk_commands.h  vk_common.h  vk_context.cpp  vk_context.h  vk_descriptors.cpp  vk_descriptors.h  vk_image.cpp  vk_image.h  vk_init.cpp  vk_init.h  vk_material.cpp  vk_material.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swapchain.cpp  vk_swapchain.h
engine/renderer/: CMakeLists.txt  camera.cpp  camera.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  vertex.h
engine/renderer/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_context.cpp  vk_context.h  vk_image.cpp  vk_image.h  vk_init.cpp  vk_init.h  vk_pch.h  vk_renderer.cpp  vk_renderer.h  vk_swapchain.cpp  vk_swapchain.h
engine/tests/: CMakeLists.txt
include/: pch.h
include/glitch/: pch.h
misc/: delete_spirv_files.sh  ffi_lua_resource.h.in
programs/: CMakeLists.txt
programs/bundler/: CMakeLists.txt  bundler.cpp
shaders/: CMakeLists.txt  input_structures.glsl  lit.frag  lit.vert  material.glsl  mesh.frag  mesh.vert  vertex_data.glsl
shaders/include/: common.slang  light_sources.slang  lighting_pbr.slang  lighting_phong.slang
shaders/pipelines/: pbr.slang  unlit.slang
shaders/src/: lit.frag  mesh.vert  unlit.frag
src/: CMakeLists.txt
src/core/: CMakeLists.txt  application.cpp  application.h  buffer.cpp  color.h  core.h  deletion_queue.cpp  deletion_queue.h  entrypoint.h  hash.h  input.cpp  log.cpp  timer.cpp  timer.h  transform.cpp  transform.h  uid.cpp  uid.h  window.cpp  window.h
src/core/debug/: assert.h  log.cpp  log.h
src/core/event/: event_system.h  input.cpp  input.h  key_code.h  mouse_button.h  mouse_code.h
src/core/memory/: buffer.cpp  buffer.h  memory.h  paged_allocator.h
src/core/templates/: rect.h  vector_view.h
src/glitch/: pch.h
src/platform/vulkan/: CMakeLists.txt  vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_commands.cpp  vk_commands.h  vk_common.cpp  vk_common.h  vk_compute.cpp  vk_compute.h  vk_context.cpp  vk_context.h  vk_descriptors.cpp  vk_descriptors.h  vk_image.cpp  vk_image.h  vk_init.cpp  vk_init.h  vk_material.cpp  vk_material.h  vk_mesh.cpp  vk_mesh.h  vk_model.cpp  vk_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_queue.cpp  vk_queue.h  vk_renderer.cpp  vk_renderer.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_sync.h  vk_uniform.cpp
src/programs/: CMakeLists.txt
src/renderer/: CMakeLists.txt  camera.cpp  camera.h  compute.cpp  image.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h  render_backend.h  renderer.cpp  renderer.h  scene_graph.cpp  scene_graph.h  scene_renderer.cpp  shader.cpp  types.cpp  types.h
src/renderer/materials/: material_unlit.cpp
src/scene/: CMakeLists.txt  components.cpp  components.h  scene.cpp  scene.h  view.h
src/shaders/: CMakeLists.txt  depth_only.vert  input_structures.glsl  material.glsl  mesh.frag  mesh.vert  pbr.glsl  sky_light.glsl  triangle.frag  triangle.vert  white.frag
testbed/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  grid.cpp  grid.h  main.cpp  testbed.cpp  testbed.h
testbed/examples/spinning_cube/: spinning_cube.cpp
testbed/shaders/: infinite_grid.frag  infinite_grid.vert
testbed/shaders/hello_triangle/: triangle.vert.spv
testbed/shaders/spinning_cube/: cube.vert.spv
testbed/shaders/textures/: textured_rect.frag.spv  textured_rect.vert.spv
testbed/src/: camera_controller.cpp  camera_controller.h  example.h  game.cpp  game.h  scene_data.h
testbed/src/examples/hello_triangle/: hello_triangle.cpp  hello_triangle.h
testbed/src/examples/spinning_cube/: spinning_cube.cpp  spinning_cube.h
testbed/src/examples/textures/: textures.cpp  textures.h
tests/: CMakeLists.txt  main.cpp
tests/asset/: test_asset_system.cpp
tests/core/: buffer_tests.cpp  color_tests.cpp  matrix_tests.cpp  quat_tests.cpp  test_ref_counted.cpp  test_result.cpp  timer_tests.cpp  transform_tests.cpp  vector_tests.cpp
tests/renderer/: scene_graph_tests.cpp
tests/scene/: scene_tests.cpp  test_scene.cpp  test_scene_registry.cpp
tests/scripting/: test_basic.lua  test_bindings.cpp  test_scripting_engine.cpp
tests/scripting/lua/: test_basic.lua  test_bindings.lua  test_fields.lua
(+242 files in other folders)
